# hyper

./: .credo.exs  .gitignore  .nvim.lua  AGENTS.md  CLA.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  codecov.yml  coveralls.json  followups.txt  mix.exs  plan.txt
.claude/: settings.json
.github/scripts/: check-versions.sh  check-versions.test.sh
.github/workflows/: ci.yml  release.yml  test-results.yml
config/: config.exs  runtime.exs
docs/: grpc.md
docs/cookbook/: architecture.md  config.md  install.md  intro.md  loading-images.md  monitoring.md
docs/plans/: 2026-06-19-sys-package-and-monitoring.md
docs/superpowers/plans/: 2026-06-18-node-imagestore-interfaces.md  2026-06-19-firecracker-provider.md
lib/: hyper.ex
lib/controls/: ewma.ex  linear.ex  rate.ex
lib/hyper/: application.ex  cfg.ex  cluster.ex  config.ex  grpc.ex  img.ex  layer.ex  node.ex  scheduler.ex  single_node_guard.ex  suid_helper.ex  vm.ex
lib/hyper/cfg/: budget.ex  cluster.ex  db.ex  dirs.ex  gc.ex  grpc.ex  img.ex  jails.ex  mon.ex  otel.ex  telemetry.ex  timeouts.ex  toml.ex  tools.ex  vm_linux.ex  vmlinux.ex
lib/hyper/cluster/: budget.ex  layer_auditor.ex  routing.ex  scheduler.ex
lib/hyper/grpc/: codec.ex  endpoint.ex  server.ex
lib/hyper/img/: oci_loader.ex
lib/hyper/node/: blob_source.ex  budget.ex  cow.ex  fire_vmm.ex  image_store.ex  img.ex  jailer.ex  layer.ex  reaper.ex  reclaim.ex  users.ex  vmlinux.ex
lib/hyper/redist/: file.ex  sha256.ex  targz.ex
lib/hyper/suid_helper/: blockdev.ex  chroot_jail.ex  dmsetup.ex  jail.ex  losetup.ex
lib/hyper/sys/: arch.ex  cmd.ex  posix.ex  tmp.ex  unit.ex
lib/hyper/vm/: id.ex  instance.ex  jailer.ex  spec.ex
lib/mix/tasks/: firecracker.install.ex  guest_agent.install.ex  suidhelper.install.ex
lib/redist/: file.ex  sha256.ex  targz.ex
lib/sys/: arch.ex  mon.ex  posix.ex  tmp.ex
lib/sys/linux/: cgroup.ex  dmsetup.ex  fstab.ex  losetup.ex  mknod.ex  nss.ex  subid.ex
lib/sys/mon/: cpu.ex  disk_bw.ex  ewma.ex  mem.ex  net_bw.ex  rate.ex  sampler.ex  server.ex
lib/unit/: bandwidth.ex  information.ex  operators.ex  quantity.ex  time.ex
native/devhelper/: Cargo.toml  README.md  rust-toolchain.toml
native/devhelper/src/: main.rs  safe_bin.rs  setuid_privileged.rs
native/guest-agent/: Cargo.toml  build.rs
native/guest-agent/examples/: health_uds.rs
native/guest-agent/src/: agent.rs  exec.rs  init.rs  lib.rs  main.rs  wire.rs
native/guest-agent/tests/: exec.rs  wire.rs
native/suidhelper/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
native/suidhelper/.cargo/: config.toml
native/suidhelper/.config/: nextest.toml
native/suidhelper/meta/: Cargo.toml
native/suidhelper/meta/src/: lib.rs
native/suidhelper/src/: checksum.rs  config.rs  lib.rs  main.rs  safe_bin.rs  safe_dev.rs  security_gate.rs  setuid_privileged.rs
native/suidhelper/src/tools/: blockdev.rs  chroot_jail.rs  dmsetup.rs  jailer.rs  losetup.rs  mknod.rs  mod.rs  reset_jail.rs  stage.rs
native/suidhelper/src/tools/chroot_jail/: grant.rs  grant_api.rs  grant_vsock.rs  mod.rs  prepare.rs  remove.rs
native/suidhelper/src/tools/dmsetup/: message.rs  mod.rs  snapshot.rs  table.rs  thin.rs  thin_pool.rs
native/suidhelper/src/util/: chroot_jail.rs  mod.rs  safe_bin.rs  safe_dev.rs  safe_dir.rs  safe_file.rs  safe_path.rs  setuid_privileged.rs
native/suidhelper/tests/: config_seam.rs  config_uid_gid_range.rs  security_gate.rs
native/suidhelper/tests/e2e/: argv.rs  chroot_jail.rs  config.rs  jailer.rs
native/suidhelper/tests/tools/: chroot_jail_grant_api.rs  chroot_jail_grant_vsock.rs  chroot_jail_remove.rs  dmsetup_parsers.rs  jailer.rs
native/suidhelper/tests/util/: chroot_jail.rs  confinement.rs  safe_bin.rs  safe_dev.rs  safe_path.rs
native/suidhelper/xtask/: Cargo.toml
native/suidhelper/xtask/src/: install.rs  main.rs  stamp.rs
priv/firecracker/: firecracker-v1.16.0.openapi.json
priv/repo/migrations/: 20260620213001_create_image_db.exs
priv/vmlinux/: manifest.json
test/: hyper_test.exs  test_helper.exs
test/controls/: ewma_properties_test.exs  ewma_test.exs  linear_test.exs  rate_properties_test.exs
test/hyper/: config_test.exs  node_test.exs  suid_helper_test.exs
test/hyper/cfg/: budget_test.exs  dirs_test.exs  facades_test.exs  gc_test.exs  grpc_test.exs  img_db_test.exs  img_test.exs  jails_test.exs  mon_test.exs  otel_test.exs  resolver_test.exs  timeouts_test.exs  toml_test.exs  tools_test.exs  vm_linux_test.exs  vmlinux_test.exs
test/hyper/cluster/: routing_test.exs
test/hyper/grpc/: codec_test.exs  grpc_test.exs  server_test.exs
test/hyper/img/: oci_loader_agent_test.exs  oci_loader_test.exs
test/integration/: grpc_spike_test.exs
test/redist/: file_test.exs  sha256_properties_test.exs  sha256_test.exs  targz_test.exs
test/support/: firecracker_recording_client.ex  otel_case.ex
test/unit/: bandwidth_parse_test.exs  bandwidth_test.exs  information_parse_test.exs  information_test.exs  operators_test.exs  quantity_properties_test.exs  scaling_properties_test.exs  time_parse_test.exs  time_test.exs
(+207 files in other folders)
