[package]
name = "hyper-guest-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyper_guest_agent"
path = "src/lib.rs"

[[bin]]
name = "hyper-guest-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["mount", "process", "socket", "signal", "fs"] }

[dev-dependencies]
proptest = "1"

[[test]]
name = "wire"
path = "tests/wire.rs"

[[test]]
name = "exec"
path = "tests/exec.rs"
