[package]
name = "hyper-suidhelper"
version = "0.1.0"
edition = "2021"
description = "Tiny setuid-root helper that runs a whitelisted set of device commands for the unprivileged Hyper node."

[[bin]]
name = "hyper-suidhelper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["user", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
strip = true
opt-level = "z"
