[package]
name = "hyper-suidhelper"
version = "0.1.0"
edition = "2021"
description = "Tiny setuid-root helper that runs a whitelisted set of device commands for the unprivileged Hyper node."

[[bin]]
name = "hyper-suidhelper"
path = "src/main.rs"

# Integration tests mirror the `src/` module tree under `tests/`. Cargo only
# auto-discovers test files at the top level of `tests/`, so each nested file
# needs an explicit target pointing at its path.
[[test]]
name = "safe_path"
path = "tests/util/safe_path.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["user", "fs", "dir"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
proptest = "1"

[profile.release]
strip = true
opt-level = "z"
