[package]
name = "hyper-suidhelper"
version = "0.1.0"
edition = "2021"
description = "Tiny setuid-root helper that runs a whitelisted set of device commands for the unprivileged Hyper node."
license = "AGPL-3.0-or-later"
repository = "https://github.com/harmont-dev/hyper"

[features]
# TEST ONLY. Compiles the security_gate insecure arms. Never enable for a real
# (setuid) build — build.rs refuses to compile a release binary with this on.
insecure_test_seams = []

[[bin]]
name = "hyper-suidhelper"
path = "src/main.rs"

# Integration tests mirror the `src/` module tree under `tests/`. Cargo only
# auto-discovers test files at the top level of `tests/`, so each nested file
# needs an explicit target pointing at its path.
[[test]]
name = "safe_path"
path = "tests/util/safe_path.rs"

[[test]]
name = "safe_dev"
path = "tests/util/safe_dev.rs"

[[test]]
name = "security_gate"
path = "tests/security_gate.rs"

[[test]]
name = "config_seam"
path = "tests/config_seam.rs"

[[test]]
name = "util_safe_bin"
path = "tests/util/safe_bin.rs"

[[test]]
name = "tools_dmsetup_parsers"
path = "tests/tools/dmsetup_parsers.rs"

[[test]]
name = "util_confinement"
path = "tests/util/confinement.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["user", "fs", "dir"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
